# ffmpeg-pathcer

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: build-proxy.yml
dda-hook-core/: Cargo.toml
dda-hook-core/src/: lib.rs  logging.rs  state.rs
dda-hook-core/src/hooks/: duplication_proxy.rs  dxgi_adapter.rs  dxgi_output.rs  mod.rs  vtable.rs
deployer/: Cargo.toml
desktop-shot/src/: main.rs
export-scan/: Cargo.toml
export-scan/src/: lib.rs
output/: README.md
poc/: README.md  dll_layout.py  loop_normal_verify.py  probe_pump_without_encode.py  record_until_ctrlc.py  run_all.py  start_stream.py  test_harness_system.py  verify_matrix.py
poc/android-viewer/: settings.gradle.kts
poc/android-viewer/gradle/: libs.versions.toml
poc/android-viewer/gradle/wrapper/: gradle-wrapper.properties
poc/android-viewer/mobile/: build.gradle.kts
poc/android-viewer/tv/: build.gradle.kts
poc/android-viewer/tv/src/main/: AndroidManifest.xml
poc/android-viewer/tv/src/main/java/com/example/latencypoc/tv/: AnnexBNalReader.kt  MainActivity.kt  NsdAdvertiser.kt  StreamStats.kt  TcpReceiver.kt  VideoDecoder.kt
poc/android-viewer/tv/src/main/res/values/: strings.xml
poc/capture-helper/: Cargo.toml
poc/capture-helper/src/: main.rs
poc/dda-probe/: Cargo.toml
poc/dda-probe/src/: main.rs
poc/deployer/src/: main.rs
poc/desktop-shot/: Cargo.toml
poc/desktop-shot/src/: main.rs
poc/dummy-tcp-server/: Cargo.toml
poc/dummy-tcp-server/src/: main.rs
poc/latency-poc/: README.md
poc/latency-poc/windows-sender/: mdns_discovery.py  paths.py  requirements.txt  send_stream.py
poc/reports/: parsec_vdd_fps_report.md
poc/test-harness/: Cargo.toml
poc/test-harness/src/: main.rs
poc/vdd-helper/: Cargo.toml
poc/vdd-helper/src/: main.rs
proxy/: Cargo.toml  build.rs
proxy/src/: lib.rs  logging.rs  recovery.rs  state.rs
proxy/src/hooks/: d3d11_device.rs  duplication_proxy.rs  dxgi_adapter.rs  dxgi_device.rs  mod.rs  pump.rs  slots.rs
test-harness/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
