[package]
name = "ddagrab_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "ddagrab_proxy"
crate-type = ["cdylib"]

[build-dependencies]
export-scan = { path = "../export-scan" }
anyhow = "1"

[dependencies]
once_cell = "1"
parking_lot = "0.12"
windows-core = "0.62"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
]

[profile.release]
panic = "abort"
