[package]
name = "ddagrab_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "ddagrab_proxy"
crate-type = ["cdylib"]

[build-dependencies]
export-scan = { path = "../export-scan" }
anyhow = "1"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
]

[profile.release]
panic = "abort"
