[package]
name = "dda-probe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dda-probe"
path = "src/main.rs"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 1
